src/objects/New_Integration_Lead_Notification__mdt.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <default>true</default>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address to send the notification to</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Languages of the notification to be sent</description>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>New Integration Lead Notification</label>
    <pluralLabel>New Integration Lead Notifications</pluralLabel>
</CustomObject>